# tiny-bip39

./: Cargo.toml
src/: crypto.rs  error.rs  language.rs  lib.rs  mnemonic.rs  mnemonic_type.rs  seed.rs  util.rs
src/langs/: chinese_simplified.rs  english.rs  english.txt  mod.rs
tests/: generate.rs  validate.rs
