[package]
name = "tiny-bip39"
version = "0.8.0"
authors = [
    "Stephen Oliver <steve@infincia.com>",
    "Maciej Hirsz <hello@maciej.codes>",
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/maciejhirsz/tiny-bip39/"
repository = "https://github.com/maciejhirsz/tiny-bip39/"
readme = "README.md"
description = "A fork of the bip39 crate with fixes to v0.6. Rust implementation of BIP-0039"
documentation = "https://docs.rs/tiny-bip39"
keywords = ["bip39", "bitcoin", "mnemonic"]
edition = "2018"

[lib]
name = "bip39"
path = "src/lib.rs"

[features]
std = ["rand", "unicode-normalization"]
chinese-simplified = []
chinese-traditional = []
# Note: English is the standard for bip39 so always included
french = []
italian = []
japanese = []
korean = []
spanish = []

# default = ["chinese-simplified", "chinese-traditional", "french", "italian", "japanese", "korean", "spanish"]

[dependencies]
rustc-hash = {version = "1.1.0", default-features=false}
sha2 = {version="0.9.1", default-features=false}
hmac = {version="0.8.1", default-features=false}
pbkdf2 = { version = "0.4.0", default-features = false }
rand = {version="0.7.3", optional=true}
unicode-normalization = {version="0.1.13", optional=true}
# zeroize = { version = "1.1.1", features = ["zeroize_derive"] }
heapless = "*"

[dev-dependencies]
hex = "0.4.2"
